# POS

./: .gitignore
POS_Application/: CMakeLists.txt  dashboard.cpp  dashboard.h  dashboard.ui  inventory.cpp  inventory.h  inventory.ui  main.cpp  mainwindow.cpp  mainwindow.ui
POS_Application/backup/inventory/: primeMaterial.txt
POS_Application/backup/products/: Bebidas.txt  Comidas.txt  Products.txt
POS_Application/products/: Bebidas.txt  Comidas.txt
POS_Application/src/: appcontroller.cpp  appcontroller.h  appmodel.cpp  appmodel.h  backupcontroller.cpp  backupcontroller.h  backupmodule.cpp  dashboard.cpp  dashboard.ui  dish.cpp  dish.h  filehandler.cpp  filehandler.h  inventory.cpp  inventory.h  inventory.ui  inventorypage.cpp  inventorypage.h  inventorypage.ui  login.cpp  login.h  login.ui  loginpage.cpp  loginpage.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  product.h  supplyitem.h
POS_Application/src/common/: util.cpp  util.h
POS_Application/src/controller/: appcontroller.cpp  appcontroller.h  mainwindow.ui
POS_Application/src/model/: backupmodule.cpp  backupmodule.h  model.cpp  model.h  posmodel.cpp  posmodel.h  product.cpp  product.h  receipt.cpp  receipt.h  supply.cpp  supply.h  supplyitem.cpp  supplyitem.h  user.cpp  user.h
POS_Application/src/ui/: categoriespage.cpp  categoriespage.h  categoriespage.ui  categoryformdialog.cpp  categoryformdialog.h  categoryformdialog.ui  inventorypage.cpp  inventorypage.h  inventorypage.ui  loginpage.cpp  loginpage.h  loginpage.ui  productformdialog.cpp  productformdialog.h  productformdialog.ui
POS_Application/src/ui/inventory/: Inventory.cpp  catalog.h  categories.cpp  categories.h  categories.ui  categoriescatalog.cpp  categoriescatalog.h  categoriescatalog.ui  categoryformdialog.cpp  categoryformdialog.h  categoryformdialog.ui  inventory.h  inventory.ui  productformdialog.cpp  productformdialog.h  productformdialog.ui  products.cpp  products.h  products.ui  productscatalog.cpp  productscatalog.h  productscatalog.ui  supplies.cpp  supplies.h  supplies.ui  suppliescatalog.cpp  suppliescatalog.h  suppliescatalog.ui  supplyformdialog.cpp  supplyformdialog.h  supplyformdialog.ui
POS_Application/src/ui/inventory/categories/: categoriescatalog.cpp  categoriescatalog.h  categoriescatalog.ui
POS_Application/src/ui/inventory/categories/dialogs/: categoryformdialog.cpp
POS_Application/src/ui/inventory/products/: productscatalog.cpp  productscatalog.h
POS_Application/src/ui/inventory/products/dialogs/: productformdialog.cpp  productformdialog.h  productformdialog.ui
POS_Application/src/ui/inventory/supplies/: supplyformdialog.h  supplyformdialog.ui
POS_Application/src/ui/inventory/supplies/dialogs/: suppliescatalog.cpp  suppliescatalog.h  suppliescatalog.ui
POS_Application/src/ui/pos/: billingpage.cpp  billingpage.h  billingpage.ui  cashierdialog.cpp  cashierdialog.h  cashierdialog.ui  cashierpage.cpp  cashierpage.h  cashierpage.ui  expensedialog.cpp  expenselabel.cpp  expenselabel.h  incomelabel.ui  order.cpp  orderelement.cpp  orderelement.ui  pos.cpp  pos.h  pos.ui  processreceiptdialog.cpp  processreceiptdialog.h  processreceiptdialog.ui  productselectionbutton.cpp  productselectionbutton.h  productselectionbutton.ui  receipt.cpp  receipt.h  receipt.ui  receiptelement.cpp  receiptelement.h  receiptelement.ui  receiptelementwidget.ui  receiptselectionbutton.cpp  receiptselectionbutton.h  receiptselectionbutton.ui  selectreceiptwidget.ui
POS_Application/src/ui/pos/billing/: billingpage.cpp  billingpage.h  billingpage.ui  orderselectionbutton.cpp  orderselectionbutton.h  orderselectionbutton.ui  productselectionbutton.ui
POS_Application/src/ui/pos/billing/dialogs/: processorderdialog.cpp  processorderdialog.h  processorderdialog.ui
POS_Application/src/ui/pos/billing/order/: order.cpp  order.h  order.ui  orderelement.h
POS_Application/src/ui/pos/cashier/: cashierpage.cpp  cashierpage.h  cashierpage.ui  expenselabel.ui  incomelabel.cpp  incomelabel.h
POS_Application/src/ui/pos/cashier/dialogs/: cashierdialog.cpp  expensedialog.h  expensedialog.ui
POS_Application/src/ui/settings/: assistance.cpp  assistance.h  assistance.ui  logout.cpp  logout.h  logout.ui  personalization.cpp  personalization.h  personalization.ui  settings.cpp  settings.h  settings.ui
POS_Application/src/ui/users/: userformdialog.cpp  userformdialog.h  userformdialog.ui  users.cpp  users.h  users.ui
POS_Application/src/ui/users/dialogs/: userformdialog.ui
